xxxxxxxxxx
    * Breaking changes:
          - AsyncClient::new takes a parsed Jid instead of string (#72)