@@ -11,6 +11,8 @@ use xmpp_parsers::{BareJid, Element, Jid};
 
 #[tokio::main]
 async fn main() {
+    env_logger::init();
+
     let args: Vec<String> = args().collect();
     if args.len() != 3 {
         println!("Usage: {} <jid> <password>", args[0]);
