@@ -1,3 +1,5 @@
 xxxxxxxxxx
     * Breaking changes:
           - AsyncClient::new takes a parsed Jid instead of string (#72)
+	* Changes:
+		- env_logger is now included in dev_dependencies for examples debugging with RUST_LOG=debug
